--- a/index.html
+++ b/index.html
@@ -1991,7 +1991,8 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2023 BookMyProfessionals.com. All rights reserved.</p>
+                <p>&copy; 2023 BookMyProfessionals.com
+                          All rights reserved.</p>
                 <div class="footer-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
